# termo-agent

./: .dockerignore  Dockerfile  LICENSE  README.md  agent_loop.py  config.py  fly.toml  memory.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: publish.yml
termo_agent/: __init__.py  adapter.py  cli.py  server.py  telegram_webhook.py
termo_agent/adapters/: __init__.py  claude_agents.py  memory_engine.py  nanobot.py  openai_agents.py  platform_adapter.py
tests/: conftest.py  test_adapter.py  test_claude_agents_adapter.py  test_cli.py  test_memory_engine.py  test_platform_adapter.py  test_server.py  test_telegram_webhook.py
tools/: __init__.py
