[project]
name = "termo-agent"
version = "0.1.0"
description = "Universal HTTP API gateway for AI agents — framework-agnostic, SSE streaming, session management"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tanic Labs", email = "hello@termo.ai"}
]
keywords = ["ai", "agent", "gateway", "http", "sse", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
nanobot = ["nanobot-ai>=0.1.4"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
termo-agent = "termo_agent.cli:main"

[project.urls]
Homepage = "https://github.com/Tanic-Labs/termo-agent"
Repository = "https://github.com/Tanic-Labs/termo-agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["termo_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
