[project]
name = "termo-agent"
version = "0.3.1"
description = "Open-source serverless runtime for AI agents — bring any framework, get a production HTTP server with SSE streaming, sessions, auth, and memory."
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tanic Labs", email = "hello@termo.ai"}
]
keywords = ["ai", "agent", "gateway", "http", "sse", "streaming", "serverless"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = [
    "openai-agents>=0.1",
    "chromadb>=0.4",
]
anthropic = [
    "claude-agent-sdk>=0.1",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
termo-agent = "termo_agent.cli:main"

[project.urls]
Homepage = "https://github.com/taco-devs/termo-agent"
Repository = "https://github.com/taco-devs/termo-agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["termo_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
